--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         <div class="flex justify-between items-center my-4">
                 <h2 class="text-[24px]">Best Deal For Your</h2>
-                <button onclick="handleShortButton()" class="btn btn-accent bg-[#0E7A81] text-white px-6 py-2">Sort by Price</button>
+                <button onclick="handleSortButton()" class="btn btn-accent bg-[#0E7A81] text-white px-6 py-2">Sort by Price</button>
         </div>
 
         <div id="pet-list-container" class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-2  my-4">
